--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -5,107 +5,137 @@
     android:layout_height="match_parent"
     android:background="@color/color_ffffff">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/statusBarView"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/dynamicAppBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/statusbar_view_height"
-            android:background="@color/color_fb435b" />
+            android:layout_height="wrap_content"
+            android:background="@color/color_ffffff">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp48"
-            android:background="@color/color_fb435b"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/searchLayout"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp30"
-                android:layout_marginRight="@dimen/dp30"
-                android:layout_weight="1"
-                android:background="@drawable/shape_search"
-                android:gravity="center"
-                android:text="搜索关键字及达人昵称"
-                android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp_14" />
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dp15">
-
-                <ImageView
-                    android:id="@+id/msgImg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_msg_white" />
-
-                <ImageView
-                    android:id="@+id/msgDotImg"
-                    android:layout_width="@dimen/dp6"
-                    android:layout_height="@dimen/dp6"
-                    android:layout_gravity="right"
-                    android:src="@drawable/shpe_white_dot"
-                    android:visibility="gone" />
-            </FrameLayout>
-        </LinearLayout>
-
-        <android.support.design.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.design.widget.AppBarLayout
+            <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/color_ffffff"
-                app:elevation="0dp">
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:titleEnabled="false">
 
-                <com.youth.banner.Banner
-                    android:id="@+id/headerBanner"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:visibility="gone"
-                    app:layout_scrollFlags="scroll" />
-
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    android:background="#fff"
+                    app:layout_collapseMode="pin"
+                    app:layout_collapseParallaxMultiplier="0.6">
 
-                    <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
-                        android:id="@+id/dynamicTabLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/dp45"
+                    <com.youth.banner.Banner
+                        android:id="@+id/headerBanner"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:visibility="gone" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/headerBanner"
                         android:layout_gravity="center_horizontal"
-                        app:pstsDividerColor="@android:color/transparent"
-                        app:pstsIndicatiorWidth="@dimen/dp30"
-                        app:pstsIndicatorColor="@color/color_ff5555"
-                        app:pstsIndicatorHeight="2dp"
-                        app:pstsTabPaddingLeftRight="@dimen/dp10"
-                        app:pstsTextColor="@color/color_666666"
-                        app:selectedTabTextColor="@color/color_ff5555" />
-                </LinearLayout>
+                        android:gravity="center"
+                        android:orientation="vertical">
 
-            </android.support.design.widget.AppBarLayout>
+                        <xkh.hzp.xkh.com.base.view.PagerSlidingTabStrip
+                            android:id="@+id/dynamicTabLayout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/dp45"
+                            android:layout_gravity="center_horizontal"
+                            app:pstsDividerColor="@android:color/transparent"
+                            app:pstsIndicatiorWidth="@dimen/dp30"
+                            app:pstsIndicatorColor="@color/color_ff5555"
+                            app:pstsIndicatorHeight="2dp"
+                            app:pstsTabPaddingLeftRight="@dimen/dp10"
+                            app:pstsTextColor="@color/color_666666"
+                            app:selectedTabTextColor="@color/color_ff5555" />
+                    </LinearLayout>
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/dynamicViewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-        </android.support.design.widget.CoordinatorLayout>
-    </LinearLayout>
+                </RelativeLayout>
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/dynamicToolBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_bar_red_bg"
+                    app:contentInsetStart="0dp"
+                    app:layout_collapseMode="pin">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <View
+                            android:id="@+id/statusBarView"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/statusbar_view_height" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/dp48"
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:visibility="visible">
+
+                            <TextView
+                                android:id="@+id/searchLayout"
+                                android:layout_width="0dp"
+                                android:layout_height="30dp"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="@dimen/dp30"
+                                android:layout_marginRight="@dimen/dp30"
+                                android:layout_weight="1"
+                                android:background="@drawable/shape_search"
+                                android:gravity="center"
+                                android:text="搜索关键字及达人昵称"
+                                android:textColor="@color/color_666666"
+                                android:textSize="@dimen/sp_14" />
+
+
+                            <FrameLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="@dimen/dp15">
+
+                                <ImageView
+                                    android:id="@+id/msgImg"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/icon_msg_white" />
+
+                                <ImageView
+                                    android:id="@+id/msgDotImg"
+                                    android:layout_width="@dimen/dp6"
+                                    android:layout_height="@dimen/dp6"
+                                    android:layout_gravity="right"
+                                    android:src="@drawable/shpe_white_dot"
+                                    android:visibility="gone" />
+                            </FrameLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/dynamicViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <xkh.hzp.xkh.com.base.view.sectorMenu.SectorMenuButton
         android:id="@+id/bottomMenuButton"
@@ -130,4 +160,6 @@
         app:aebRippleEffect="true"
         app:aebStartAngleDegree="90"
         app:aebSubButtonSizeDp="40dp" />
+
 </FrameLayout>
+
